Fixed width of page 2 and hid scrollbars

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
   font-family: "Courier New", Courier, monospace;
 }
 
+body {
+  overflow: hidden;
+}
+
 h1 {
   left: 0;
   line-height: 200px;
@@ -17,7 +21,7 @@ h2 {
   line-height: 50px;
   position: absolute;
   text-align: center;
-  top: 190%;
+  top: 100%;
   width: 100%;
 }
 
